# Swan_Quote_Generator

./: .dockerignore  .env.example  .gitignore  .vercelignore  CNAME  DOCKER.md  Dockerfile  Makefile  OLLAMA_SETUP.md  QUICKSTART.md  README.md  build.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt  start.sh  vercel.json
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: README.md  ci.yml  code-quality.yml  deploy.yml  labeler.yml
api/: index.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/controllers/: __init__.py  quote_controller.py
app/api/models/: __init__.py  quote_models.py
app/api/routes/: __init__.py  quote_routes.py
app/api/utils/: __init__.py  ai_client.py  prompt_builder.py
app/static/: .gitignore  README.md  package-lock.json  package.json
app/static/public/: index.html
app/static/src/: App.css  App.js
app/static/src/components/: AnimatedBackground.js  FluidCursor.js  Navigation.js  QuoteGenerator.js
scripts/: __init__.py  example_client.py
static/: package-lock.json  package.json  tailwind.config.js
static/public/: index.html
static/src/: App.css  App.js  index.css
static/src/components/: QuoteGenerator.js
tests/: __init__.py
tests/integration/: test_api.py  test_ollama.py
tests/unit/: test_quote_generator.py
